fixed z-index issue on 'continuar lendo'

--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -93,7 +93,7 @@
     color: $color-white;
     letter-spacing: 1.6px;
     font-weight: 500;
-    z-index: 1000;
+    z-index: 100;
     transition: color .25s;
   }
 
