--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -147,7 +147,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    z-index: 2;
+    z-index: 1000;
     /* border: 1px solid red; */
   }
 
